wasm/genomic_period_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_eo8yi9ux/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/81a8cf6e4fa8857dacedb71debb228558256fd6b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/81a8cf6e4fa8857dacedb71debb228558256fd6b.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/348b7c8baeb2b0cd52a0646cb064a7290a875c68.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/348b7c8baeb2b0cd52a0646cb064a7290a875c68.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/e69507be139a72ff97052d8b466db7b75d0a6d6b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/e69507be139a72ff97052d8b466db7b75d0a6d6b.json" for subsequent builds)
cache:INFO:  - ok
